django-deploy/django-deployments.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-container
  template:
    metadata:
      labels:
        app: django-container
    spec:
      containers:
        - name: django
          image: serbenyuk/django-blog:latest
          #command: ['/bin/bash', 'run.sh'] # runs migrations and starts the server
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 600Mi  
---
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  type: ClusterIP
  selector:
    app: django-container
  ports:
    - port: 8000
      targetPort: 8000
