django-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:  
    - host: minikube.local            
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: django
                port:
                  number: 8000
